--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,4 @@
 databaseChangeLog:
   - include:
-      file: /db/changelog/db.changelog-1.0.yaml
+        # Banks
+      file: /db/changelog/02_banks.sql
