--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -17,3 +17,17 @@ databaseChangeLog:
   - include:
         #
       file: /db/changelog/07_insert_okv.sql
+  - include:
+          #
+        file: /db/changelog/08_type_accounts.sql
+  - include:
+          #
+        file: /db/changelog/09_insert_type_accounts.sql
+  - include:
+          #
+        file: /db/changelog/10_accounts.sql
+  - include:
+          #
+        file: /db/changelog/11_curs_val_cb.sql
+
+
