Настроил ликви справочники

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -29,5 +29,7 @@ databaseChangeLog:
   - include:
           #
         file: /db/changelog/11_curs_val_cb.sql
-
+  - include:
+      #
+      file: /db/changelog/14_users.sql
 
