--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -50,5 +50,9 @@ databaseChangeLog:
   - include:
       #
       file: /db/changelog/20_bank_dog.sql
-
-
+  - include:
+      #
+      file: /db/changelog/21_grant_org_user.sql
+  - include:
+      #
+      file: /db/changelog/22_add_summ_oper.sql
