--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -56,3 +56,27 @@ databaseChangeLog:
   - include:
       #
       file: /db/changelog/22_add_summ_oper.sql
+  - include:
+      #
+      file: /db/changelog/23_alter_struct.sql
+  - include:
+      #
+      file: /db/changelog/24_balance_account.sql
+  - include:
+      #
+      file: /db/changelog/25_alter_struct.sql
+  - include:
+      #
+      file: /db/changelog/26_report_details.sql
+  - include:
+      #
+      file: /db/changelog/26_1_alter_table.sql
+  - include:
+      #
+      file: /db/changelog/27_v_data_day_report.sql
+  - include:
+      #
+      file: /db/changelog/28_v_report_header.sql
+  - include:
+      #
+      file: /db/changelog/29_settings.sql
