--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -113,4 +113,7 @@ databaseChangeLog:
   - include:
       #
       file: /db/changelog/38_alter_v_report_header.sql
+  - include:
+      #
+      file: /db/changelog/39_bank_bic.sql
 
